--- a/style/style.css
+++ b/style/style.css
@@ -59,7 +59,7 @@ body{
     align-items: center;
     flex-direction: column;
 
-    padding-top: 5%;
+    padding-top: 6.5%;
     font-family: var(--font-um);
     font-size: 1.6rem;
     font-weight: 900;
@@ -72,7 +72,7 @@ body{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    padding-top: 2%;
+    padding-top: 4%;
     gap: 25px;
     font-family: var(--font-dois);
     margin-bottom: 5%;
@@ -173,6 +173,12 @@ body{
     transform: translateY(2px);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   }
+
+@media (max-width: 1100px){
+    .imagem-shogun{
+        padding: 10%
+    }
+}
 
 
 
