--- a/style/style.css
+++ b/style/style.css
@@ -36,21 +36,24 @@ body{
     display: flex;
     justify-content: center;
     background-color: var(--cor--um);
+    width: 100%;
     height: 95px;
+    position: absolute;
 }
 
-.imagem-shogun{
-    display: flex;
-    justify-content: center;
+.menu-superior img{
+    flex-direction: column;
     align-items: center;
-    padding: 6.9%;
+    padding: 6.7%;
 }
+
 
 .conteudo-principal{
     display: flex;
     align-items: center;
     flex-direction: column;
     height: 100%;
+    padding-top: 5%;
 }
 
 .titulo-destaque{
@@ -173,12 +176,5 @@ body{
     transform: translateY(2px);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   }
-
-@media (max-width: 1100px){
-    .imagem-shogun{
-        padding: 10%
-    }
-}
-
 
 
