--- a/style/style.css
+++ b/style/style.css
@@ -42,13 +42,14 @@ body{
 
 .container{
     display: flex;
+    justify-content: center;
     justify-content: space-between;
 }
 
 .menu-superior img{
     flex-direction: column;
     align-items: center;
-    padding: 6.7%;
+    padding: 18% 0% 0% 0%;
 }
 
 
@@ -196,5 +197,11 @@ body{
 @media (max-width: 512px){
     .titulo-destaque{
         padding-top: 14%;
+    }
+}
+
+@media (max-width: 350px){
+    .titulo-destaque{
+        padding-top: 20%;
     }
 }
