--- a/style/style.css
+++ b/style/style.css
@@ -47,9 +47,11 @@ body{
 }
 
 .menu-superior img{
+    object-fit: cover;
     flex-direction: column;
     align-items: center;
     padding: 18% 0% 0% 0%;
+    height: 23vh;
 }
 
 
