--- a/style/style.css
+++ b/style/style.css
@@ -47,11 +47,10 @@ body{
 }
 
 .menu-superior img{
-    object-fit: cover;
     flex-direction: column;
     align-items: center;
-    padding: 18% 0% 0% 0%;
-    height: 23vh;
+    padding: 10% 0% 0% 0%;
+    height: 150%;
 }
 
 
@@ -204,6 +203,6 @@ body{
 
 @media (max-width: 350px){
     .titulo-destaque{
-        padding-top: 20%;
+        padding-top: 19%;
     }
 }
