--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,22 @@ body{
     height: 95px;
 }
 
+.menu-links{
+    display: flex;
+    position: fixed;
+    padding: 2.7% 50% 0% 0%;
+    gap: 80px;
+}
+
+.botao-menu{
+    font-size: 1.3rem;
+    text-decoration: none;
+
+    color: #000000;
+    font-family: var(--font-dois);
+    font-weight: 600;
+}
+
 .container{
     display: flex;
     justify-content: center;
@@ -51,6 +67,7 @@ body{
     align-items: center;
     padding: 10% 0% 0% 0%;
     height: 150%;
+    width: 100%;
 }
 
 
