--- a/style/style.css
+++ b/style/style.css
@@ -40,13 +40,22 @@ body{
     height: 95px;
 }
 
+.laranja{
+    font-size: 1.3rem;
+    text-decoration: none;
+
+    color: var(--cor--dois);
+    font-family: var(--font-um);
+    font-weight: 600;
+}
+
 .menu-links{
     position: absolute;
     top: 32px; 
-    left: 13.5%; 
+    right: 15%; 
     display: flex;
     flex-direction: row;
-    gap: 90px;
+    gap: 50px;
 }
 
 .botao-menu{
@@ -209,8 +218,7 @@ body{
     }
 
     .menu-links{
-        left: 8%;
-        gap: 60px;
+        right: 15%;
     }
 }
 
@@ -220,15 +228,13 @@ body{
     }
 
     .menu-links{
-        left: 23%;
-        gap: 200px;
+        right: 23%;
     }
 }
 
 @media (max-width: 550px){
     .menu-links{
-        left: 20%;
-        gap: 200px;
+        right: 20%;
     }
 }
 
@@ -238,15 +244,14 @@ body{
     }
 
     .menu-links{
-        left: 16%;
-        gap: 190px;
+        right: 16%;
     }
 }
 
+
 @media (max-width: 370px){
     .menu-links{
-        left: 11.2%;
-        gap: 170px;
+        right: 11.2%;
     }
 }
 
@@ -256,7 +261,6 @@ body{
     }
 
     .menu-links{
-        left: 8.7%;
-        gap: 155px;
+        right: 8.7%;
     }
 }
