--- a/style/style.css
+++ b/style/style.css
@@ -217,6 +217,18 @@ header{
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   }
 
+
+  /* about html */
+
+  .imagem-lutador{
+    position: fixed;
+    left: 0%;
+    opacity: 40%;
+  }
+
+
+
+
   @media (max-width: 1100px){
             
     .titulo-destaque{
