--- a/style/style.css
+++ b/style/style.css
@@ -230,7 +230,7 @@ header{
   .container-about{
     display: flex;
     justify-content: center;
-    padding: 10% 15% 0% 0%;
+    padding: 10% 0% 0% 0%;
   }
 
   .cubo-um{
@@ -305,8 +305,7 @@ header{
     font-size: 1.8rem;
 
     display: flex;
-    justify-content: center;
-    padding-top: 2%;
+    padding-top: 1%;
   }
 
   .dia-semana{
@@ -325,6 +324,7 @@ header{
     justify-content: right;
   }
 
+.cubo-um,
 .cubo-dois,
 .cubo-tres,
 .cubo-quatro,
@@ -353,13 +353,16 @@ header{
 .cubo-sete,
 .cubo-oito,
 .cubo-nove {
-  width: 150%;
-  height: 25%;
+  width: 100%;
+  height: 20%;
   display: flex;
   align-items: center;
 }
 
-
+.cubo-um{
+    justify-content: center;
+    height: 23%;
+}
 
   @media (max-width: 1100px){
             
@@ -367,6 +370,15 @@ header{
          padding-top: 10%;
     }  
 
+    .titulo-funcionamento{
+        font-size: 1rem;
+    }
+    .dia-semana{
+        font-size: 1rem;
+    }
+    .horario-semana{
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 750px){
@@ -383,7 +395,15 @@ header{
         padding-left: 55%;
          gap: 200px;
     }  
-
+    .titulo-funcionamento{
+        font-size: 0.8rem;
+    }
+    .dia-semana{
+        font-size: 0.8rem;
+    }
+    .horario-semana{
+        font-size: 0.8rem;
+    }
 }
 
 @media (max-width: 450px){
