--- a/style/style.css
+++ b/style/style.css
@@ -31,8 +31,14 @@ body{
     box-sizing: border-box;
     transition: 0.3s;
     background-color: var(--cor--dois);
+    width: 100%;
+    height: 100%;
 }
 
+header{
+  width: 100%;
+  height: 100%;
+}
 
 .menu-superior{
     display: flex;
@@ -361,6 +367,7 @@ body{
     height: 23%;
 }
 
+
   @media (max-width: 1100px){
             
     .titulo-destaque{
@@ -368,13 +375,13 @@ body{
     }  
 
     .titulo-funcionamento{
-        font-size: 1rem;
+        font-size: 1.4rem;
     }
     .dia-semana{
-        font-size: 1rem;
+        font-size: 1.4rem;
     }
     .horario-semana{
-        font-size: 1rem;
+        font-size: 1.4rem;
     }
 }
 
@@ -395,13 +402,13 @@ body{
          gap: 200px;
     }  
     .titulo-funcionamento{
-        font-size: 0.8rem;
+        font-size: 1.2rem;
     }
     .dia-semana{
-        font-size: 0.8rem;
+        font-size: 1.2rem;
     }
     .horario-semana{
-        font-size: 0.8rem;
+        font-size: 1.2rem;
     }
 }
 
@@ -413,7 +420,15 @@ body{
     .container-about{
         padding: 40% 0% 0% 0%;
       }
-
+      .titulo-funcionamento{
+        font-size: 1rem;
+    }
+    .dia-semana{
+        font-size: 1rem;
+    }
+    .horario-semana{
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 390px){
@@ -426,5 +441,14 @@ body{
         padding: 50% 0% 0% 0%;
       }
 
+      .titulo-funcionamento{
+        font-size: 0.8rem;
+    }
+    .dia-semana{
+        font-size: 0.8rem;
+    }
+    .horario-semana{
+        font-size: 0.8rem;
+    }
 }
 
