--- a/style/style.css
+++ b/style/style.css
@@ -31,8 +31,7 @@ body{
     box-sizing: border-box;
     transition: 0.3s;
     background-color: var(--cor--dois);
-    width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 header{
