--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,8 @@ body{
     box-sizing: border-box;
     transition: 0.3s;
     background-color: var(--cor--dois);
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 header{
@@ -97,6 +98,7 @@ header{
     flex-direction: column;
     width: 100%;
     height: 100%;
+    min-height: 100vh;
 }
 
 .titulo-destaque{
@@ -440,7 +442,7 @@ header{
         padding: 50% 0% 0% 0%;
       }
 
-      .titulo-funcionamento{
+    .titulo-funcionamento{
         font-size: 0.8rem;
     }
     .dia-semana{
@@ -449,5 +451,6 @@ header{
     .horario-semana{
         font-size: 0.8rem;
     }
+
 }
 
