--- a/style/style.css
+++ b/style/style.css
@@ -31,8 +31,7 @@ body{
     box-sizing: border-box;
     transition: 0.3s;
     background-color: var(--cor--dois);
-    width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 header{
@@ -96,8 +95,6 @@ header{
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     min-height: 100vh;
 }
 
@@ -398,6 +395,9 @@ header{
 
 @media (max-width: 600px){
             
+  header{
+    padding-right: 100%;
+  }
     .menu-links{
         padding-left: 55%;
          gap: 200px;
@@ -415,6 +415,9 @@ header{
 
 @media (max-width: 450px){
             
+  header{
+    padding-right: 100%;
+  }
     .titulo-destaque{
          padding-top: 25%;
     }  
@@ -434,6 +437,9 @@ header{
 
 @media (max-width: 390px){
             
+  header{
+    padding-right: 100%;
+  }
     .menu-links{
         padding-left: 55%;
          gap: 150px;
