--- a/style/style.css
+++ b/style/style.css
@@ -31,19 +31,16 @@ body{
     box-sizing: border-box;
     transition: 0.3s;
     background-color: var(--cor--dois);
+    width: 100%;
+    height: 100%;
     min-height: 100vh;
-}
-
-header{
-  width: 100%;
-  height: 100%;
+    
 }
 
 .menu-superior{
     display: flex;
     justify-content: center;
     background-color: var(--cor--um);
-    width: 100%;
     height: 95px;
 }
 
@@ -60,9 +57,8 @@ header{
     display: flex;
     justify-content: left;
     padding-top: 32px; 
-    padding-right: 55%; 
     flex-direction: row;
-    gap: 50px;
+    gap: 200px;
     position: absolute;
 }
 
@@ -222,16 +218,10 @@ header{
 
   /* about html */
 
-  .imagem-lutador{
-    position: fixed;
-    left: 0%;
-    opacity: 40%;
-  }
-
   .container-about{
     display: flex;
     justify-content: center;
-    padding: 10% 0% 0% 0%;
+    padding-top: 15%;
   }
 
   .cubo-um{
@@ -395,13 +385,6 @@ header{
 
 @media (max-width: 600px){
             
-  header{
-    padding-right: 100%;
-  }
-    .menu-links{
-        padding-left: 55%;
-         gap: 200px;
-    }  
     .titulo-funcionamento{
         font-size: 1.2rem;
     }
@@ -415,9 +398,6 @@ header{
 
 @media (max-width: 450px){
             
-  header{
-    padding-right: 100%;
-  }
     .titulo-destaque{
          padding-top: 25%;
     }  
@@ -437,11 +417,7 @@ header{
 
 @media (max-width: 390px){
             
-  header{
-    padding-right: 100%;
-  }
     .menu-links{
-        padding-left: 55%;
          gap: 150px;
     }  
     .container-about{
