--- a/style/style.css
+++ b/style/style.css
@@ -218,6 +218,95 @@ body{
 
   /* about html */
 
+  .container-local{
+    padding-top: 4%;
+    padding-bottom: 1%;
+  }
+
+  .botao-localizacao{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    align-items: center;
+
+    background-color: var(--cor--um);
+    clip-path: polygon(0% 0%,100% 0%, 100% 100%, 32% 100%);
+
+    position: absolute;
+    right: 0;
+    
+    padding-left: 1%;
+    width: 91px;
+    height: 113px;
+    transition: all .3s ease-out;
+  }
+
+  .botao-localizacao:hover {
+    width: 450px;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 15% 100%);
+
+    .conteudo-localizacao-um{
+      opacity: 1; 
+    }
+    .conteudo-localizacao-dois{
+      opacity: 1;
+    }
+
+    .bi-geo-alt-fill{
+      font-size: 2rem;
+      position: relative;
+    }
+  }
+
+  .bi-geo-alt-fill{
+    font-size: 2rem;
+    position: absolute;
+  }
+
+  .conteudo-local{
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+    flex-direction: column;
+  }
+
+  .conteudo-localizacao-um{
+    font-size: 1.3rem;
+    font-family: var(--font-dois);
+    font-weight: 600;
+
+    overflow: hidden;
+    opacity: 0;
+    transition: all .3s ease-out;
+  }
+
+  .conteudo-localizacao-dois{
+    font-size: 1.1rem;
+    font-family: var(--font-dois);
+    font-weight: 600;
+
+    overflow: hidden;
+    opacity: 0;
+    transition: all .3s ease-out;
+  }
+
+  .copy-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    
+    width: 40px;
+    height: 40px;
+
+    background-color: var(--cor--quatro);
+  }
+
+  .bi-files{
+    padding-top: 5px;
+    font-size: 1.3rem;
+  }
+
   .container-about{
     display: flex;
     justify-content: center;
@@ -371,20 +460,39 @@ body{
     .horario-semana{
         font-size: 1.4rem;
     }
+
+    .conteudo-localizacao-um{
+      font-size: 1.1rem;
+    }
+  
+    .conteudo-localizacao-dois{
+      font-size: 0.9rem;
+    }
+    .container-local{
+      padding-top: 10%;
+      padding-bottom: 1%;
+    }
+    .botao-localizacao{
+      width: 70px;
+      height: 100px;
+    }
 }
 
 @media (max-width: 750px){
-            
-    .titulo-destaque{
-         padding-top: 15%;
-    }  
-    .container-about{
-        padding: 30% 0% 0% 0%;
-      }
+
+  .container-local{
+    padding-top: 15%;
+    padding-bottom: 8%;
+  }
 }
 
 @media (max-width: 600px){
             
+  .container-local{
+    padding-top: 18%;
+    padding-bottom: 10%;
+  }
+
     .titulo-funcionamento{
         font-size: 1.2rem;
     }
@@ -394,17 +502,25 @@ body{
     .horario-semana{
         font-size: 1.2rem;
     }
+
+    .conteudo-localizacao-um{
+      font-size: 0.9rem;
+    }
+  
+    .conteudo-localizacao-dois{
+      font-size: 0.7rem;
+    }
+    .botao-localizacao:hover {
+      width: 350px;
+      height: 100px;
+      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 15% 100%);
+    }
+
 }
 
 @media (max-width: 450px){
             
-    .titulo-destaque{
-         padding-top: 25%;
-    }  
-    .container-about{
-        padding: 40% 0% 0% 0%;
-      }
-      .titulo-funcionamento{
+    .titulo-funcionamento{
         font-size: 1rem;
     }
     .dia-semana{
@@ -413,6 +529,15 @@ body{
     .horario-semana{
         font-size: 1rem;
     }
+    .botao-localizacao:hover {
+      width: 330px;
+      height: 70px;
+      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 15% 100%);
+    }
+    .container-local{
+      padding-top: 20%;
+      padding-bottom: 12%;
+    }
 }
 
 @media (max-width: 390px){
@@ -420,10 +545,16 @@ body{
     .menu-links{
          gap: 150px;
     }  
-    .container-about{
-        padding: 50% 0% 0% 0%;
-      }
 
+    .botao-localizacao:hover {
+      width: 300px;
+      height: 70px;
+      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 15% 100%);
+    }
+    .container-local{
+      padding-top: 24%;
+      padding-bottom: 12%;
+    }
     .titulo-funcionamento{
         font-size: 0.8rem;
     }
