--- a/style/style.css
+++ b/style/style.css
@@ -484,6 +484,10 @@ body{
     padding-top: 15%;
     padding-bottom: 8%;
   }
+
+  .titulo-destaque{
+    padding-top: 17%;
+  }
 }
 
 @media (max-width: 600px){
@@ -538,6 +542,10 @@ body{
       padding-top: 20%;
       padding-bottom: 12%;
     }
+
+    .titulo-destaque{
+      padding-top: 20%;
+    }
 }
 
 @media (max-width: 390px){
@@ -545,6 +553,10 @@ body{
     .menu-links{
          gap: 150px;
     }  
+
+    .titulo-destaque{
+      padding-top: 25%;
+    }
 
     .botao-localizacao:hover {
       width: 300px;
