--- a/style/style.css
+++ b/style/style.css
@@ -596,12 +596,13 @@ body{
 @media (max-width: 390px){
             
   .copy-button{
-    width: 22px;
+    width: 22spx;
     height: 22px;
+    border-radius: 9px;
   }
 
   .bi-files{
-    font-size: 8rem;
+    font-size: 0.8rem;
   }
           
     .menu-links{
