--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,7 @@ body{
     height: 100%;
     min-height: 100vh;
     
+    overflow-y: scroll;
 }
 
 .menu-superior{
@@ -77,7 +78,6 @@ body{
     justify-content: center;
     justify-content: space-between;
 }
-
 
 .menu-superior img{
     flex-direction: column;
@@ -358,6 +358,7 @@ body{
     padding-top: 5px;
     font-size: 1.2rem;
   }
+
 
   .container-about{
     display: flex;
